--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>user-management</module>
         <module>forum-management</module>
+        <module>shared-kernel</module>
     </modules>
 
 </project>
