Add User and Role service in forum-management module through http rest

--- a/forum-management/src/main/resources/application.properties
+++ b/forum-management/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8081
+
+app.forum.connect-timeout-ms=5000
+app.forum.read-timeout-ms=5000
+
+app.user-management.url=http://localhost:8082
+
+app.user-management.connect-timeout-ms=5000
+app.user-management.read-timeout-ms=5000
+
 
