--- a/user-management/pom.xml
+++ b/user-management/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>jakarta.validation-api</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
