Update application properties

--- a/forum-management/src/main/resources/application.properties
+++ b/forum-management/src/main/resources/application.properties
@@ -9,3 +9,15 @@ app.user-management.connect-timeout-ms=5000
 app.user-management.read-timeout-ms=5000
 
 
+# Datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/forum
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
